[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorus"
version = "0.2.1"
description = "Intelligent memory engine for AI agents — mem0 fork with ACE layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "TPY"}]
keywords = ["memory", "ai", "agent", "mem0", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mem0ai>=1.0.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16", "tokenizers>=0.15"]
graph = ["neo4j>=5.0"]
llm = ["litellm>=1.40"]
team = ["httpx>=0.25"]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
agents = ["openai-agents>=0.1"]
langchain = ["langchain-core>=0.2"]
all = ["memorus[onnx]", "memorus[graph]", "memorus[llm]", "memorus[team]", "memorus[mcp]", "memorus[api]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "build",
    "twine",
]

[project.scripts]
memorus = "memorus.core.cli.main:cli"
memorus-mcp = "memorus.ext.mcp_server:main"
memorus-api = "memorus.ext.rest_api:main"

[project.urls]
Homepage = "https://github.com/user/memorus"
Documentation = "https://github.com/user/memorus#readme"
Repository = "https://github.com/user/memorus"
Issues = "https://github.com/user/memorus/issues"
Changelog = "https://github.com/user/memorus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["memorus*"]
exclude = ["tests*", "docs*", "bmad*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["memorus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
